:snowflake: Adds Hassio API security role

--- a/docker-enabler/config.json
+++ b/docker-enabler/config.json
@@ -13,6 +13,7 @@
     ],
     "boot": "manual",
     "hassio_api": true,
+    "hassio_role": "manager",
     "options": {
         "target": ""
     },
